--- a/css/standard.css
+++ b/css/standard.css
@@ -8,10 +8,10 @@
 a:link, a:visited {
     color:var(--invertedbackground);
     border-radius: 25px;
-    background-color: transparent;
+    border-color: transparent;
     padding: 14px 0px;
     text-align: center;
-    font-size: 35px;
+    font-size: 1rem;
     width: 1000px;
     text-decoration: none;
     display: inline-block;
@@ -56,7 +56,7 @@ body{
 }
 
 .heading{
-    font-size: 128px;
+    font-size: 3rem;
     }
 
 @keyframes animate{
