--- a/css/standard.css
+++ b/css/standard.css
@@ -7,12 +7,9 @@
 
 a:link, a:visited {
     color:var(--invertedbackground);
-    border-radius: 25px;
-    border-color: transparent;
-    padding: 14px 0px;
+    padding: 1rem 0%;
     text-align: center;
-    font-size: 1rem;
-    width: 1000px;
+    font-size: 2rem;
     text-decoration: none;
     display: inline-block;
     cursor:pointer;
@@ -29,7 +26,7 @@ body{
 }
 
 .gradient-border{
-    width: 1000px;
+    width: 80rem;
 }
 
 
@@ -49,14 +46,14 @@ body{
 }
 
 .links{
-    margin-top:100px;
+    margin-top: 3rem;
     display: grid;
     justify-content: center;
     align-content: center;
 }
 
 .heading{
-    font-size: 3rem;
+    font-size: 5rem;
     }
 
 @keyframes animate{
