--- a/css/newGame.css
+++ b/css/newGame.css
@@ -5,11 +5,11 @@ input[type=text]{
     -webkit-background-size: 500%;
     background-size: 500%;
     font-family: "Lucida Handwriting",Calligraphic,Arial;;
-    font-size: 64px;
+    font-size: 3vw;
     border: 2px solid var(--invertedbackground);
     background-color: var(--background-color);
     color: transparent;
-    height: 100px;
+    width: 100%;
     text-align: center;
 }
 
@@ -18,9 +18,9 @@ input[type=text]{
     display: grid;
     grid-template-columns: repeat(4, 250);
     grid-template-rows: repeat(4, 250);
-    height: 500px;
-    width: 1000px;
-    gap: 10px;
+    height: 100%;
+    width: 100%;
+    gap: 1vh;
     grid-template-areas:
     "a a a a"
     "b b b b"
@@ -30,7 +30,8 @@ input[type=text]{
 #playername{
     grid-area: a;
     border-radius: 25px;
-    width: 992px;
+    width: 100%;
+    margin-top: 2vh;
 }
 
 #chooseCharacter{
@@ -38,11 +39,11 @@ input[type=text]{
     border-radius: 25px;
     padding: 2px 1px;
     border: 2px solid var(--invertedbackground);
-    width: 994px;
+    width: 100%;
 }
 
 .buttons{
-    width: 1000px;
+    width: 100%;
     grid-area: c;
     grid-auto-flow: column;
     display: grid;
@@ -60,15 +61,15 @@ input[type=text]{
 }
 
 #startGame{
-    width: 490px;
-    padding:14px 0px;
+    width: 50%;
+    padding:2rem 0%;
     justify-self: center;
     grid-area: b;
 }
 
 #backToMenu{
-    width: 490px;
-    padding: 14px 0px;
+    width: 50%;
+    padding: 2rem 0%;
     justify-self: center;
     grid-area: a;
 }
