--- a/css/settings.css
+++ b/css/settings.css
@@ -1,7 +1,7 @@
 .settings{
     align-items: center;
     display: grid;
-    gap: 10px;
+    gap: 5%;
     grid-template-areas:
     "a"
     "b"
@@ -11,14 +11,13 @@
 
 .volume{
     grid-area: a;
-    width: 1000px;
+    width: 100%;
     justify-self: center;
     margin-top: 100px;
-    font-size:32px;
+    font-size:2vw;
     display: grid;
     grid-template-columns: repeat(2, 250);
     grid-template-rows: repeat(2, 250);
-    gap: 10px;
     grid-template-areas:
     "a"
     "b";
@@ -30,7 +29,7 @@
 
 
 .range-slider {
-    width: 1000px;
+    width: 100%;
     margin-top: 4em;
     margin-bottom: 1em;
     position: relative;
@@ -101,7 +100,7 @@
     background-image: linear-gradient( to left, var(--primary-color), var(--secondary-color));
     background: var(--background-color);
     text-align: center;
-    line-height: 70px;
+    line-height: 200%;
     color: var(--invertedbackground);
     border-radius: 3px;
     box-shadow: 0px 3px 10px #1f1f1f,
@@ -150,14 +149,14 @@
 
 #reset{
     grid-area: a;
-    width: 490px;
+    width: 49%;
     padding:14px 0px;
     justify-self: center;
 }
 
 #save{
     grid-area: b;
-    width: 490px;
+    width: 49%;
     padding:14px 0px;
     justify-self: center;
 }
@@ -188,6 +187,6 @@
 .colorPicker{
     padding: 10px;
     border: 2px solid var(--invertedbackground);
-    font-size: 32px;
+    font-size: 4vw;
     text-align: left;
 }
