--- a/css/standard.css
+++ b/css/standard.css
@@ -7,9 +7,9 @@
 
 a:link, a:visited {
     color:var(--invertedbackground);
-    padding: 1rem 0%;
+    padding: 1vh 0%;
     text-align: center;
-    font-size: 2rem;
+    font-size: 2vw;
     text-decoration: none;
     display: inline-block;
     cursor:pointer;
@@ -26,7 +26,7 @@ body{
 }
 
 .gradient-border{
-    width: 80rem;
+    width: 80vh;
 }
 
 
@@ -53,12 +53,12 @@ body{
 }
 
 .heading{
-    font-size: 5rem;
+    font-size: 5vw;
     }
 
 @keyframes animate{
     0%{
-            background-position: 0 100%;
+        background-position: 0 100%;
     }
     50%{
         background-position: 100% 0;
