editor first changes

--- a/css/settings.css
+++ b/css/settings.css
@@ -163,12 +163,12 @@
 
 .color-indicator {
     display: inline-block;
-    width: 100px;
-    height: 100px;
+    width: 8vw;
+    height: 8vw;
     vertical-align: middle;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+    margin-left: 1vw;
 }
 
 .primaryColorPicker .color-indicator {
@@ -185,7 +185,7 @@
 }
 
 .colorPicker{
-    padding: 10px;
+    padding: 1vh;
     border: 2px solid var(--invertedbackground);
     font-size: 4vw;
     text-align: left;
