--- a/css/game.css
+++ b/css/game.css
@@ -17,3 +17,11 @@ body,html
 {
     border: black solid;
 }
+#score
+{
+    position: absolute;
+    top: 5%;
+    left:5%;
+    font-size: 2.5rem;
+    font-style: bold;
+}
