--- a/css/settings.css
+++ b/css/settings.css
@@ -27,117 +27,89 @@
     grid-area: b;
 }
 
-
-.range-slider {
+.slider-container{
     width: 100%;
-    margin-top: 4em;
-    margin-bottom: 1em;
-    position: relative;
-    display: flex;
 }
 
-.range-slider .slider {
-    -webkit-appearance: none;
+.slider{
     width: 100%;
-    height: 0.4em;
-    outline: none;
-    border-radius: 3px;
-    background: var(--invertedbackground);
-    box-shadow: 3px 3px 6px var(--background-color),
-    inset 1px 1px 1px #909090;
-}
-
-.range-slider .slider::-webkit-slider-thumb {
+    appearance:none;
     -webkit-appearance: none;
-    width: 1.7em;
-    height: 1.7em;
-    cursor: pointer;
-    z-index:3;
-    position: relative;
-}
-
-.range-slider .slider-thumb {
-    position: absolute;
-    width: 1.7em;
-    height: 1.7em;
-    background: var(--background-color);
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    z-index: 2;
-    box-shadow: inset 0px 1px 2px #909090;
-}
-
-.range-slider .slider-thumb::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 1em;
-    height: 1em;
-    background: var(--invertedbackground);
-    border-radius: inherit;
-    transition: 0.3s;
-}
-
-.range-slider:hover .slider-thumb:before {
-    background: var(--gradient);
-    background-size: 500%;
-    animation: animate 5s linear infinite;
-
-}
-
-.range-slider .tooltip {
-    position: absolute;
-    width: 2.8em;
-    height: 2em;
-    top: -2em;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    -moz-appearance: none;
+    height: 1vh;
     background-image: var(--gradient);
-    background: var(--background-color);
+}
+
+.slider::-webkit-slider-thumb{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width:25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 2px solid var(--secondary-color);
+    background-color: var(--primary-color);
+    cursor:pointer;
+}
+
+
+
+.slider::-moz-range-thumb{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width:25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 2px solid var(--secondary-color);
+    background-color: var(--primary-color);
+    cursor:pointer;
+}
+
+.slider::-moz-range-thumb:hover{
+    background-color: green;
+}
+
+.range .sliderValue{
+    position:relative;
+    width: 100%;
+}
+
+.range .sliderValue span{
+    position: absolute;
+    height: 3vw;
+    width: 3vw;
+    font-size: 1.5vw;
     text-align: center;
-    line-height: 200%;
-    color: var(--invertedbackground);
-    border-radius: 3px;
-    box-shadow: 0px 3px 10px #1f1f1f,
-    inset 0px 1px 2px #909090;
+    color: var(--primary-color);
+    font-weight: 500;
+    top: -3.5vw;
+    transform:translateX(-20%) scale(0);
+    transform-origin: bottom;
+    transition: transform 0.3s ease-in-out;
+    line-height: 3vw;
+    z-index: 2;
+
 }
 
+.range .sliderValue span.show{
+    transform:translateX(-20%) scale(1);
+}
 
-
-.range-slider .tooltip::before {
-    content:'';
+.range .sliderValue span:after{
     position: absolute;
-    width: 0;
-    height: 0;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 10px solid #090909;
-    bottom: -0.5em;
-    left: 50%;
-    transform: translate(-50%);
-}
+    content: "";
+    height: 3vw;
+    width: 3vw;
+    left: 0;
+    background: var(--secondary-color);
+    transform:translateX(-20%) rotate(45deg);
+    border: 3px solid var(--invertedbackground);
+    z-index: -1;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-bottom-left-radius: 50%;
 
-.range-slider .progress {
-    width: 50%;
-    height: 0.4em;
-    border-radius: 3px;
-    background: var(--gradient);
-    position: absolute;
-    top:50%;
-    transform: translateY(-50%);
-    left:0;
-    pointer-events: none;
-}
-
-@media screen and (max-width: 700px) {
-    .neu-range-slider {
-        width: 100%;
-    }
 }
 
 .buttons{
@@ -170,6 +142,37 @@
     margin-top: 1vw;
     margin-bottom: 1vw;
     margin-left: 1vw;
+}
+
+
+.primaryColorPicker {
+    background-image: var(--gradient);
+    background-size: 500%;
+    -webkit-background-size: 500%;
+    background-position: left;
+    -webkit-background-clip: text;
+    background-clip: text;
+    animation: animate 5s linear infinite;
+}
+
+.secondaryColorPicker{
+    background-image: var(--gradient);
+    background-size: 500%;
+    -webkit-background-size: 500%;
+    background-position: left;
+    -webkit-background-clip: text;
+    background-clip: text;
+    animation: animate 5s linear infinite;
+}
+
+.backgroundColorPicker{
+    background-image: var(--gradient);
+    background-size: 500%;
+    -webkit-background-size: 500%;
+    background-position: left;
+    -webkit-background-clip: text;
+    background-clip: text;
+    animation: animate 5s linear infinite;
 }
 
 .primaryColorPicker .color-indicator {
