cleaned constants, outsourced classes and funcs added player image, rotated triangles, coll detection for triangles

--- a/css/game.css
+++ b/css/game.css
@@ -16,6 +16,9 @@ body,html
 #canvas
 {
     border: black solid;
+    background-image: url('../img/canvas_background.jpg');
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 #score
 {
