--- a/css/editor.css
+++ b/css/editor.css
@@ -74,6 +74,7 @@ canvas {
     grid-area: b;
     background: var(--background);
     border: 2px solid var(--invertedbackground);
+    border-radius: .3rem;
     padding: 0;
     margin: 0 auto;
     margin-bottom: 1rem;
