death particles added, bottom movement particles added

--- a/css/game.css
+++ b/css/game.css
@@ -19,6 +19,17 @@ body,html
     background-image: url('../img/canvas_background.jpg');
     background-repeat: no-repeat;
     background-size:cover;
+    background-attachment: fixed;
+
+
+
+
+    image-rendering: optimizeSpeed;             /* Older versions of FF          */
+    image-rendering: -moz-crisp-edges;          /* FF 6.0+                       */
+    image-rendering: -webkit-optimize-contrast; /* Safari                        */
+    image-rendering: -o-crisp-edges;            /* OS X & Windows Opera (12.02+) */
+    image-rendering: pixelated;                 /* Awesome future-browsers       */
+    -ms-interpolation-mode: nearest-neighbor;   /* IE                            */
 }
 #score
 {
@@ -27,4 +38,5 @@ body,html
     left:5%;
     font-size: 2.5rem;
     font-style: bold;
+    display: none;
 }
