--- a/css/editor.css
+++ b/css/editor.css
@@ -18,19 +18,21 @@ iframe{
         "f f f";
     justify-self: center;
     justify-items: center;
-    justify-items: center;
+    align-items: center;
     font-size: 3vw;
     width: 100%;
 }
 .decideAutoOrCustomMap{
     padding: 1vh 0%;
     text-align: center;
+    align-items: center;
     text-decoration: none;
     cursor:pointer;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
 }
 
 button {
+    text-transform:uppercase;
     border: 0;
     color: transparent;
     background-image: var(--gradient);
@@ -40,7 +42,7 @@ button {
     background-clip: text;
     transition: background-position 0.2s;
     cursor:pointer;
-    font-size: 3vw;
+    font-size: 2vw;
     width: 100%;
 }
 
@@ -54,9 +56,14 @@ button:hover{
 
 #customMap{
     grid-area: c;
+    font-size: 1.2vw;
 }
 
 #autoMap{
+    grid-area:e;
+}
+
+#downloadMapCreator{
     grid-area:e;
 }
 
@@ -64,11 +71,6 @@ button:hover{
     grid-area: f;
 }
 
-.seperator{
-    grid-area: d;
-    content: "";
-    color: var(--invertedbackground);
-}
 
 canvas {
     grid-area: b;
@@ -95,4 +97,15 @@ canvas {
   label:hover{
       background-position: left;
       cursor: pointer;
+  }
+
+  .songTitle{
+    grid-area: a;
+    font-size: 2vw;
+    text-align: center;
+    align-content: center;
+  }
+  
+  #downloadMapCreator{
+      font-size: 1.2vw;
   }
