--- a/css/game.css
+++ b/css/game.css
@@ -1,7 +1,9 @@
 body,html,button
 {
     margin: 0;
-    padding: 0;
+    padding: 0; 
+    font-family: var(--fontfam);
+    background-color: var(--background-color);
 }
 button{
     background: none;
@@ -9,6 +11,7 @@ button{
     color: white;
     font-size: 2.5rem;
     font-weight: bold;
+   
 }
 button:hover
 {
@@ -74,6 +77,7 @@ button:hover
     display: grid;
     grid-template-columns: 1;
     grid-template-rows: 1;
+    background-color: var(--background-color);
 }
 
  
@@ -103,7 +107,6 @@ button:hover
 
 #canvas
 {
-    border: black solid;
     background-image: url('../img/canvas_background.jpg');
     background-repeat: no-repeat;
     background-size:cover;
