--- a/css/newGame.css
+++ b/css/newGame.css
@@ -1,18 +1,3 @@
-input[type=text]{
-    background-image: var(--gradient);
-    -webkit-background-clip: text;
-    animation: animate 5s linear infinite;
-    -webkit-background-size: 500%;
-    background-size: 500%;
-    font-family: var(--fontfam);
-    font-size: 3vw;
-    border: 2px solid var(--invertedbackground);
-    background-color: var(--background-color);
-    color: transparent;
-    width: 100%;
-    text-align: center;
-}
-
 .startGameOrleave{
     display: grid;
     grid-template-columns: repeat(4, 250);
@@ -176,4 +161,12 @@ button::after{
 
 .mapID{
     grid-area: h;
+}
+
+.newGameStatus{
+    background-image: var(--gradient);
+    -webkit-background-clip: text;
+    background-clip: text;
+    background-size:500%;
+    animation: animate 5s linear infinite;
 }
