--- a/css/settings.css
+++ b/css/settings.css
@@ -213,6 +213,13 @@ label{
     background-clip: text;
     transition: background-position 0.2s;
     font-size: 2vw;
+    grid-area: f;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none; 
+        -ms-user-select: none; 
+            user-select: none; 
   }
 
   label:hover{
